--- a/.github/workflows/support-frontend-build.yml
+++ b/.github/workflows/support-frontend-build.yml
@@ -34,28 +34,20 @@ jobs:
 
       - run: corepack enable
         shell: bash
-        working-directory: support-frontend
 
-      # (Respects .nvmrc)
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version-file: ".nvmrc"
-          # cache: "pnpm"
-          # cache-dependency-path: |
-          #   support-frontend/pnpm-lock.yaml
 
       - name: Install
         run: pnpm install
-        working-directory: support-frontend
 
       - name: Build the html used for SSR pages
-        run: pnpm build-ssr
-        working-directory: support-frontend
+        run: pnpm --filter support-frontend build-ssr
 
       - name: Build assets
-        run: pnpm build-prod
-        working-directory: support-frontend
+        run: pnpm --filter support-frontend build-prod
 
       - name: Build CFN from CDK
         run: ./script/ci
