--- a/.github/workflows/support-workers-build.yml
+++ b/.github/workflows/support-workers-build.yml
@@ -30,13 +30,15 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # (Respects .nvmrc)
-      - name: Setup Node
+      - run: npm install --global corepack@0.31.0
+
+      - run: corepack enable
+        shell: bash
+
+      - name: Setup Node for CDK
         uses: actions/setup-node@v4
         with:
-          node-version-file: '.nvmrc'
-          cache: "yarn"
-          cache-dependency-path: '**/yarn.lock'
+          node-version-file: ".nvmrc"
 
       - name: Build CFN from CDK
         run: ./script/ci
