--- a/.github/workflows/support-lambdas-build.yml
+++ b/.github/workflows/support-lambdas-build.yml
@@ -95,20 +95,15 @@ jobs:
         run: ./script/ci
         working-directory: cdk
 
-      - run: yarn install --frozen-lockfile
-        working-directory: support-lambdas/bigquery-acquisitions-publisher
+      - run: pnpm install --frozen-lockfile
 
-      - run: yarn tsc --noEmit
-        working-directory: support-lambdas/bigquery-acquisitions-publisher
+      - run: pnpm --filter bigquery-acquisitions-publisher tsc --noEmit
 
-      - run: yarn prettier -c typescript/*.ts
-        working-directory: support-lambdas/bigquery-acquisitions-publisher
+      - run: pnpm --filter bigquery-acquisitions-publisher prettier -c typescript/*.ts
 
-      - run: yarn test
-        working-directory: support-lambdas/bigquery-acquisitions-publisher
+      - run: pnpm --filter bigquery-acquisitions-publisher test
 
-      - run: yarn build
-        working-directory: support-lambdas/bigquery-acquisitions-publisher
+      - run: pnpm --filter bigquery-acquisitions-publisher build
 
       - run: zip -qr index.zip ./*.js
         working-directory: support-lambdas/bigquery-acquisitions-publisher/target/typescript
