--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -28,29 +28,21 @@ jobs:
 
       - run: corepack enable
         shell: bash
-        working-directory: support-frontend
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
 
-      - name: Install - support-frontend
+      - name: Install Dependencies
         run: pnpm install
-        working-directory: support-frontend
 
       - name: Test - support-frontend
-        run: pnpm test
-        working-directory: support-frontend
+        run: pnpm --filter support-frontend test
 
       - name: Install & test - CDK
         run: ./script/ci
         working-directory: cdk
 
-      - name: Install - bigquery-acquisitions-publisher
-        run: yarn install
-        working-directory: support-lambdas/bigquery-acquisitions-publisher
-
       - name: Test - bigquery-acquisitions-publisher
-        run: yarn test
-        working-directory: support-lambdas/bigquery-acquisitions-publisher
+        run: pnpm --filter bigquery-acquisitions-publisher test
