Extract setup-node-and-install.yml

--- a/.github/workflows/bundle-analyser.yml
+++ b/.github/workflows/bundle-analyser.yml
@@ -16,24 +16,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - run: npm install --global corepack@0.31.0
-
-      - run: corepack enable
-        shell: bash
-        working-directory: support-frontend
-
-      - name: Install Node
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
-      # Cache npm dependencies using https://github.com/bahmutov/npm-install
-#      - name: Cache dependencies
-#        uses: bahmutov/npm-install@v1
-#        with:
-#          working-directory: support-frontend
-
-      - name: Install
-        run: pnpm install
+      - name: Setup Node and Install Dependencies
+        uses: ./.github/workflows/setup-node-and-install.yml
 
       - name: Generate production build for github action
         run: pnpm build-github-action
