--- a/.github/workflows/compressed-size.yml
+++ b/.github/workflows/compressed-size.yml
@@ -17,21 +17,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - run: npm install --global corepack@0.31.0
-
-      - run: corepack enable
-        shell: bash
-
-      - name: Install Node
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-
-      # Cache npm dependencies using https://github.com/bahmutov/npm-install
-      # - name: Cache dependencies
-      #   uses: bahmutov/npm-install@v1
-      #   with:
-      #     working-directory: support-frontend
+      - name: Setup Node and Install Dependencies
+        uses: ./.github/workflows/setup-node-and-install.yml
 
       - name: Print package.json
         run: cat /home/runner/work/support-frontend/support-frontend/support-frontend/package.json
