--- a/.github/workflows/knip.yml
+++ b/.github/workflows/knip.yml
@@ -11,21 +11,8 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - run: npm install --global corepack@0.31.0
-
-      - run: corepack enable
-        shell: bash
-        working-directory: support-frontend
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
-
-      - name: Install
-        run: pnpm install
-        working-directory: support-frontend
+      - name: Setup Node and Install Dependencies
+        uses: ./.github/workflows/setup-node-and-install.yml
 
       - name: Knip check
-        run: pnpm knip
-        working-directory: support-frontend
+        run: pnpm --filter support-frontend knip
