--- a/.github/workflows/support-frontend-prettier.yml
+++ b/.github/workflows/support-frontend-prettier.yml
@@ -13,21 +13,8 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - run: npm install --global corepack@0.31.0
-
-      - run: corepack enable
-        shell: bash
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
-          # cache: 'pnpm'
-          # cache-dependency-path: support-frontend/pnpm-lock.yaml
-
-      - name: Install
-        run: pnpm install
-        working-directory: support-frontend
+      - name: Setup Node and Install Dependencies
+        uses: ./.github/workflows/setup-node-and-install.yml
 
       - name: Prettier check
         run: pnpm prettier:check
