--- a/.github/workflows/support-lambdas-build.yml
+++ b/.github/workflows/support-lambdas-build.yml
@@ -81,21 +81,12 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - run: npm install --global corepack@0.31.0
-
-      - run: corepack enable
-        shell: bash
-
-      - name: Setup Node for CDK
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
+      - name: Setup Node and Install Dependencies
+        uses: ./.github/workflows/setup-node-and-install.yml
 
       - name: Build CFN from CDK
         run: ./script/ci
         working-directory: cdk
-
-      - run: pnpm install --frozen-lockfile
 
       - run: pnpm --filter bigquery-acquisitions-publisher tsc --noEmit
 
