--- a/.github/workflows/compressed-size.yml
+++ b/.github/workflows/compressed-size.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Node and Install Dependencies
-        uses: ./.github/workflows/setup-node-and-install.yml
+        uses: ./.github/actions/setup-node-and-install
 
       - name: Print package.json
         run: cat /home/runner/work/support-frontend/support-frontend/support-frontend/package.json
