--- a/.github/workflows/knip.yml
+++ b/.github/workflows/knip.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Node and Install Dependencies
-        uses: ./.github/workflows/setup-node-and-install.yml
+        uses: ./.github/actions/setup-node-and-install
 
       - name: Knip check
         run: pnpm --filter support-frontend knip
