--- a/.github/workflows/support-frontend-prettier.yml
+++ b/.github/workflows/support-frontend-prettier.yml
@@ -17,5 +17,4 @@ jobs:
         uses: ./.github/actions/setup-node-and-install
 
       - name: Prettier check
-        run: pnpm prettier:check
-        working-directory: support-frontend
+        run: pnpm --filter support-frontend prettier:check
