--- a/.github/workflows/compressed-size.yml
+++ b/.github/workflows/compressed-size.yml
@@ -14,17 +14,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node and Install Dependencies
-        uses: ./.github/actions/setup-node-and-install
+      - run: npm install --global corepack@0.31.0
+        shell: bash
 
-      - name: Print package.json
-        run: cat /home/runner/work/support-frontend/support-frontend/support-frontend/package.json
+      - run: corepack enable
+        shell: bash
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
 
       - name: Check compressed size of JS
         uses: preactjs/compressed-size-action@v2
         with:
+          install-script: "pnpm install"
+          build-script: "--filter support-frontend build-github-action"
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          cwd: "./support-frontend"
-          pattern: "./public/compiled-assets/{javascripts,webpack}/**/*.js"
-          build-script: "build-github-action"
+          pattern: "./support-frontend/public/compiled-assets/{javascripts,webpack}/**/*.js"
           minimum-change-threshold: 500
