--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,5 +2,6 @@ packages:
   - 'support-frontend'
   - 'cdk'
   - 'support-lambdas/bigquery-acquisitions-publisher'
+  - 'support-e2e'
 catalog:
   zod: ^3.23.8
