Use pnpm for support-workers

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,5 +3,6 @@ packages:
   - 'cdk'
   - 'support-lambdas/bigquery-acquisitions-publisher'
   - 'support-e2e'
+  - 'support-workers'
 catalog:
   zod: ^3.23.8
