--- a/.github/workflows/support-workers-build.yml
+++ b/.github/workflows/support-workers-build.yml
@@ -30,15 +30,8 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - run: npm install --global corepack@0.31.0
-
-      - run: corepack enable
-        shell: bash
-
-      - name: Setup Node for CDK
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
+      - name: Setup Node and Install Dependencies
+        uses: ./.github/actions/setup-node-and-install
 
       - name: Build CFN from CDK
         run: ./script/ci
@@ -46,9 +39,8 @@ jobs:
 
       - name: Build TypeScript lambdas
         run: |
-          yarn install --frozen-lockfile
-          yarn package
-        working-directory: support-workers
+          pnpm install --frozen-lockfile
+          pnpm --filter support-workers package
 
       - uses: sbt/setup-sbt@v1
 
