--- a/support-workers/package.json
+++ b/support-workers/package.json
@@ -11,7 +11,7 @@
     "build": "tsc",
     "clean-target": "rm -rf target && mkdir -p target",
     "install-runtime-dependencies": "pnpm install --ignore-scripts --modules-dir target/typescript/node_modules --production",
-    "build-and-zip": "pnpm clean-target && pnpm install-runtime-dependencies && pnpm build && cd target/typescript && zip -r support-workers.zip ./* -x \".*\" -x \"__MACOSX\"",
+    "build-and-zip": "pnpm clean-target && pnpm build && pnpm install-runtime-dependencies && cd target/typescript && zip -r support-workers.zip ./* -x \".*\" -x \"__MACOSX\"",
     "package": "pnpm check-formatting && pnpm lint && pnpm test && pnpm build-and-zip"
   },
   "repository": {
