Use ESBuild to build deployment files

--- a/support-workers/package.json
+++ b/support-workers/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint src/typescript/**/*.ts",
     "check-formatting": "prettier --check **.ts",
     "build": "tsc",
+    "bundle": "esbuild src/typescript/lambdas/*.ts --bundle --platform=node --target=node22 --outdir=target/typescript/lambdas",
     "clean-target": "rm -rf target && mkdir -p target",
-    "install-runtime-dependencies": "pnpm install --prod --shamefully-hoist --ignore-scripts --modules-dir target/typescript/node_modules",
-    "build-and-zip": "pnpm clean-target && pnpm build && pnpm install-runtime-dependencies && cd target/typescript && zip -r support-workers.zip ./* -x \".*\" -x \"__MACOSX\"",
+    "install-runtime-dependencies": "pnpm install --prod --install-strategy=hoisted --ignore-scripts --modules-dir target/typescript/node_modules",
+    "pnpm-deploy": "pnpm --config.shamefully-hoist=true --config.hoist=true --config.node-linker=true --config.symlinks=false --config.shared-workspace-lockfile=false deploy --filter=support-workers --prod target/typescript/node_modules",
+    "copy-node-modules": "cp -r ./node_modules target/typescript/",
+    "zip": "cd target/typescript && zip -r support-workers.zip ./* -x \".*\" -x \"__MACOSX\"",
+    "build-and-zip": "pnpm clean-target && pnpm bundle && pnpm zip",
     "package": "pnpm check-formatting && pnpm lint && pnpm test && pnpm build-and-zip"
   },
   "repository": {
@@ -22,6 +26,7 @@
   "dependencies": {
     "@aws-sdk/client-ssm": "^3.679.0",
     "@aws-sdk/credential-provider-node": "3.699.0",
+    "esbuild": "^0.25.5",
     "stripe": "^17.4.0",
     "zod": "^3.23.8"
   },
