--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -6,7 +6,7 @@
 		"start": "./devrun.sh",
 		"clean": "echo 'Cleaning Public Folder' && rimraf public/compiled-assets",
 		"validate": "echo 'Validating TS' && npm-run-all 'lint:fix' && pnpm tsc && pnpm knip",
-    "typecheck": "tsc --noEmit",
+		"typecheck": "tsc --noEmit",
 		"lint:nibble": "eslint-nibble ./assets --ext .ts,.tsx",
 		"lint:check": "eslint ./assets --ext .ts --ext .tsx",
 		"lint:fix": "eslint --fix ./assets --ext .ts --ext .tsx",
@@ -84,6 +84,7 @@
 		"@emotion/react": "^11.14.0",
 		"@emotion/utils": "^1.1.0",
 		"@floating-ui/react": "^0.27.6",
+		"@guardian/core-web-vitals": "^11.0.0",
 		"@guardian/libs": "^22.0.0",
 		"@guardian/pasteup": "1.0.0-alpha.7",
 		"@guardian/source": "8.0.0",
