--- a/support-workers/package.json
+++ b/support-workers/package.json
@@ -25,7 +25,6 @@
   "dependencies": {
     "@aws-sdk/client-ssm": "^3.679.0",
     "@aws-sdk/credential-provider-node": "3.699.0",
-    "esbuild": "^0.25.5",
     "stripe": "^17.4.0",
     "zod": "^3.23.8"
   },
@@ -34,13 +33,14 @@
     "@guardian/prettier": "^2.1.5",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.27",
-    "eslint": "^8.57.0",
-    "jest": "^29.7.0",
+    "eslint": "catalog:",
+    "jest": "catalog:",
     "jest-runner-groups": "^2.2.0",
-    "prettier": "^2.8.8",
+    "prettier": "catalog:",
     "prettier-eslint": "^16.3.0",
     "pretty-format": "^29.7.0",
     "ts-jest": "^29.2.4",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "esbuild": "^0.25.5"
   }
 }
