--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,7 +5,17 @@ packages:
   - 'support-e2e'
   - 'support-workers'
 catalog:
+  typescript: ^5.2.2
   zod: ^3.23.8
   eslint: ^8.57.0
   prettier: ^2.8.8
-  jest: ^29.7.0
+  jest: ^29.2.4
+  jest-runner-groups: ^2.2.0
+  ts-jest: ^29.2.4
+  esbuild: ^0.25.5
+  "@types/jest": ^29.5.12
+  "@types/node": ^20.11.27
+  "@aws-sdk/client-ssm": ^3.679.0
+  "@aws-sdk/credential-provider-node": 3.699.0
+  "@guardian/eslint-config-typescript": 12.0.0
+  "@guardian/prettier": ^2.1.5
