--- a/support-workers/package.json
+++ b/support-workers/package.json
@@ -23,24 +23,22 @@
   },
   "private": true,
   "dependencies": {
-    "@aws-sdk/client-ssm": "^3.679.0",
-    "@aws-sdk/credential-provider-node": "3.699.0",
+    "@aws-sdk/client-ssm": "catalog:",
+    "@aws-sdk/credential-provider-node": "catalog:",
     "stripe": "^17.4.0",
-    "zod": "^3.23.8"
+    "zod": "catalog:"
   },
   "devDependencies": {
-    "@guardian/eslint-config-typescript": "12.0.0",
-    "@guardian/prettier": "^2.1.5",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.27",
+    "@guardian/eslint-config-typescript": "catalog:",
+    "@guardian/prettier": "catalog:",
+    "@types/jest": "catalog:",
+    "@types/node": "catalog:",
     "eslint": "catalog:",
     "jest": "catalog:",
-    "jest-runner-groups": "^2.2.0",
+    "jest-runner-groups": "catalog:",
     "prettier": "catalog:",
-    "prettier-eslint": "^16.3.0",
-    "pretty-format": "^29.7.0",
-    "ts-jest": "^29.2.4",
-    "typescript": "^5.2.2",
-    "esbuild": "^0.25.5"
+    "ts-jest": "catalog:",
+    "typescript": "catalog:",
+    "esbuild": "catalog:"
   }
 }
