--- a/support-workers/package.json
+++ b/support-workers/package.json
@@ -15,7 +15,8 @@
     "clean-target": "rm -rf target && mkdir -p target",
     "zip": "cd target/typescript && zip -r support-workers.zip ./* -x \".*\" -x \"__MACOSX\"",
     "bundle-and-zip": "pnpm clean-target && pnpm bundle && pnpm zip",
-    "package": "pnpm check-formatting && pnpm lint:check && pnpm build && pnpm test && pnpm bundle-and-zip"
+    "check-modules": "pnpm --filter modules check-formatting && pnpm --filter modules lint:check",
+    "package": "pnpm check-modules && pnpm check-formatting && pnpm lint:check && pnpm build && pnpm test && pnpm bundle-and-zip"
   },
   "repository": {
     "type": "git",
