--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -64,8 +64,9 @@
 		"moduleNameMapper": {
 			"ophan(.*)": "<rootDir>/node_modules/ophan-tracker-js/build/ophan.support",
 			"\\.(css|less|sass|scss)$": "<rootDir>/assets/__mocks__/styleMock.ts",
-			"\\.(svg|png|jpg)$": "<rootDir>/assets/__mocks__/imageMock.ts"
-		},
+			"\\.(svg|png|jpg)$": "<rootDir>/assets/__mocks__/imageMock.ts",
+      "@modules/(.*)$": "<rootDir>/../modules/$1"
+    },
 		"setupFilesAfterEnv": [
 			"./jestSetup"
 		],
