--- a/cdk/package.json
+++ b/cdk/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "@guardian/cdk": "61.4.0",
-    "@guardian/eslint-config-typescript": "10.0.1",
+    "@guardian/eslint-config-typescript": "catalog:",
     "@guardian/prettier": "4.0.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.15.3",
