--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -127,7 +127,7 @@
 		"@emotion/eslint-plugin": "^11.11.0",
 		"@guardian/browserslist-config": "^6.1.2",
 		"@guardian/prettier": "^2.1.5",
-    "@guardian/eslint-config-typescript": "catalog:",
+    "@guardian/eslint-config-typescript": "10.0.1",
 		"@storybook/addon-a11y": "^8.4.2",
 		"@storybook/addon-essentials": "^8.4.5",
 		"@storybook/addon-interactions": "^8.4.2",
