Collect core web vitals data on pages under the client side router
We can add to more pages in future, this is just a first step to start
gathering data.

This will sample at the default rate of 1%.

--- a/support-frontend/conf/DEV.public.conf
+++ b/support-frontend/conf/DEV.public.conf
@@ -102,6 +102,8 @@ _src=${_src} "https://tickets.theguardian.live/"
 _src=${_src} "https://www.tickettailor.com/"
 _src=${_src} "https://cdn.tickettailor.com/js/widgets/min/widget.js"
 _src=${_src} "https://cdn.tickettailor.com/js/widgets/min/widget.css"
+# Used for collecting Core Web Vitals
+_src=${_src} "https://feast-events.guardianapis.com/web-vitals"
 
 
 play.filters.csp.directives {
