--- a/modules/package.json
+++ b/modules/package.json
@@ -9,6 +9,9 @@
     "check-formatting": "prettier --check **.ts",
     "fix-formatting": "prettier --write **.ts"
   },
+  "dependencies": {
+    "zod": "catalog:"
+  },
   "devDependencies": {
     "eslint": "catalog:",
     "@guardian/eslint-config-typescript": "catalog:",
