--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "license": "Apache-2.0",
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "pnpm --stream -r run test"
   },
   "devDependencies": {
     "husky": "^9.0.11"
